--- a/Ludum Dare 47/Ludum Dare 47.csproj
+++ b/Ludum Dare 47/Ludum Dare 47.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Engine\Screen\GameScreen.cs" />
     <Compile Include="Engine\Screen\ScreenManager.cs" />
     <Compile Include="Engine\Items\Inventory.cs" />
+    <Compile Include="Engine\Worlds\CustomJsonConverter.cs" />
     <Compile Include="Engine\Worlds\Task.cs" />
     <Compile Include="Engine\Toast\BaseToast.cs" />
     <Compile Include="Engine\Widgets\Button.cs" />
@@ -74,7 +75,10 @@
     <Compile Include="Engine\Widgets\InputField.cs" />
     <Compile Include="Engine\Widgets\Label.cs" />
     <Compile Include="Engine\Widgets\Widget.cs" />
+    <Compile Include="Engine\Worlds\Wall.cs" />
     <Compile Include="Engine\Worlds\World.cs" />
+    <Compile Include="Engine\Worlds\WorldLoader.cs" />
+    <Compile Include="Engine\Worlds\WorldManager.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,6 +86,9 @@
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -139,6 +146,10 @@
     <None Include="app.manifest" />
     <None Include="Content\Arial_12.spritefont" />
     <None Include="Content\File.spritefont" />
+    <None Include="packages.config" />
+    <None Include="Worlds\world1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Null.png" />
